--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -6,10 +6,15 @@
 
 .iconfont {
   font-family: "iconfont" !important;
-  font-size: 16px;
+  speak: none;
   font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
+  display: inline-block;
+  text-transform: none;
+  font-size: 14px;
+  line-height: 1;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-info:before {
