--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -1,8 +1,9 @@
 @import "./base.scss";
 @import "./button.scss";
 @import "./button-group.scss";
+@import "./checkbox.scss";
+@import "./checkbox-button.scss";
+@import "./checkbox-group.scss";
 @import "./radio.scss";
 @import "./radio-button.scss";
 @import "./radio-group.scss";
-@import "./checkbox.scss";
-
