--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -8,3 +8,5 @@
 @import "./radio-button.scss";
 @import "./radio-group.scss";
 @import "./Link.scss";
+@import "./InputNumber.scss";
+@import "./Input.scss";
