--- a/packages/theme-chalk/src/mixins/utils.scss
+++ b/packages/theme-chalk/src/mixins/utils.scss
@@ -1,5 +1,5 @@
 //是否可以选中文本
-@mixin utils-user-select($value){
+@mixin utils-user-select($value) {
   -moz-user-select: $value;
   -webkit-user-select: $value;
   -ms-user-select: $value;
@@ -15,7 +15,7 @@
       content: "";
     }
     #{$selector}::after {
-      clear: both
+      clear: both;
     }
   }
 }
