--- a/packages/theme-chalk/src/button.scss
+++ b/packages/theme-chalk/src/button.scss
@@ -1,232 +1,246 @@
 @charset "UTF-8";
+
 @import './mixins/mixins.scss';
 @import './common/var.scss';
 @import './mixins//utils.scss';
 @import './mixins/button.scss';
+
 @include b(button) {
-    display: inline-block;
-    line-height: 1;
-    white-space: nowrap;
-    cursor: pointer;
-    background: $--button-default-background-color;
-    color: $--button-default-font-color;
-    border: $--border-base;
-    border-color: $--button-default-border-color;
-    text-align: center;
-    box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  margin: 0;
+  font-weight: $--button-font-weight;
+  line-height: 1;
+  color: $--button-default-font-color;
+  text-align: center;
+  white-space: nowrap;
+  cursor: pointer;
+  background: $--button-default-background-color;
+  border: $--border-base;
+  border-color: $--button-default-border-color;
+  outline: none;
+  transition: .1s;
+
+  @include utils-user-select(none);
+  & + & {
+    margin-left: 10px;
+  }
+
+  @include button-size($--button-padding-vertical, $--button-padding-horizontal,$--button-font-size, $--button-border-radius);
+  &:hover,
+  &:focus {
+    color: $--color-primary;
+    background-color: $--color-primary-light-9;
+    border-color: $--color-primary-light-7;
+  }
+  &:active {
+    color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+    border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
     outline: none;
-    margin: 0;
-    transition: 0.1s;
-    font-weight: $--button-font-weight;
-    @include utils-user-select(none);
-    &+& {
-        margin-left: 10px;
+  }
+  &::-moz-focus-inner {
+    border: 0;
+  }
+  &[class*="pa-icon-"] {
+    & + span {
+      margin-left: 5px;
     }
-    @include button-size($--button-padding-vertical, $--button-padding-horizontal,$--button-font-size, $--button-border-radius);
+  }
+
+  @include when(plain) {
     &:hover,
     &:focus {
-        color: $--color-primary;
-        border-color: $--color-primary-light-7;
-        background-color: $--color-primary-light-9;
+      color: $--color-primary;
+      background: $--color-white;
+      border-color: $--color-primary;
     }
     &:active {
-        color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
-        border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
-        outline: none;
+      color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+      color: none;
+      background: $--color-white;
+      border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
     }
-    &::-moz-focus-inner {
-        border: 0;
+  }
+
+  @include when(active) {
+    color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+    border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+  }
+
+  @include when(disabled) {
+    &,
+    &:hover,
+    &:focus {
+      color: $--button-disabled-font-color;
+      cursor: not-allowed;
+      background-color: $--button-disabled-background-color;
+      background-image: none;
+      border-color: $--button-disabled-border-color;
     }
-    &[class*="pa-icon-"] {
-        &+span {
-            margin-left: 5px;
-        }
+    &.pa-button--text {
+      background-color: transparent;
     }
-    @include when(plain) {
-        &:hover,
-        &:focus {
-            background: $--color-white;
-            border-color: $--color-primary;
-            color: $--color-primary;
-        }
-        &:active {
-            background: $--color-white;
-            border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
-            color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
-            color: none;
-        }
+    &.is-plain {
+      &,
+      &:hover,
+      &:focus {
+        color: $--button-disabled-font-color;
+        background-color: $--color-white;
+        border-color: $--button-disabled-border-color;
+      }
     }
-    ;
-    @include when(active) {
-        color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
-        border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+  }
+
+  @include when(loading) {
+    position: relative;
+    pointer-events: none;
+    &::before {
+      position: absolute;
+      top: -1px;
+      right: -1px;
+      bottom: -1px;
+      left: -1px;
+      pointer-events: none;
+      content: '';
+      background-color: rgba(255, 255, 255, .35);
+      border-radius: inherit;
     }
-    @include when(disabled) {
-        &,
-        &:hover,
-        &:focus {
-            color: $--button-disabled-font-color;
-            cursor: not-allowed;
-            background-image: none;
-            background-color: $--button-disabled-background-color;
-            border-color: $--button-disabled-border-color;
-        }
-        &.pa-button--text {
-            background-color: transparent;
-        }
-        &.is-plain {
-            &,
-            &:hover,
-            &:focus {
-                background-color: $--color-white;
-                border-color: $--button-disabled-border-color;
-                color: $--button-disabled-font-color;
-            }
-        }
+  }
+
+  @include when(round) {
+    padding: 12px 23px;
+    border-radius: 20px;
+  }
+
+  @include when(circle) {
+    padding: $--button-padding-vertical;
+    border-radius: 50%;
+  }
+
+  @include m(primary) {
+    @include button-variant($--button-primary-font-color, $--button-primary-background-color, $--button-primary-border-color);
+  }
+
+  @include m(success) {
+    @include button-variant($--button-success-font-color, $--button-success-background-color, $--button-success-border-color);
+  }
+
+  @include m(warning) {
+    @include button-variant($--button-warning-font-color, $--button-warning-background-color, $--button-warning-border-color);
+  }
+
+  @include m(danger) {
+    @include button-variant($--button-danger-font-color, $--button-danger-background-color, $--button-danger-border-color);
+  }
+
+  @include m(info) {
+    @include button-variant($--button-info-font-color, $--button-info-background-color, $--button-info-border-color);
+  }
+
+  @include m(medium) {
+    @include button-size($--button-medium-padding-vertical, $--button-medium-padding-horizontal, $--button-medium-font-size, $--button-medium-border-radius);
+  }
+
+  @include m(small) {
+    @include button-size($--button-small-padding-vertical, $--button-small-padding-horizontal, $--button-medium-font-size,$--button-small-border-radius);
+  }
+
+  @include m(mini) {
+    @include button-size($--button-mini-padding-vertical, $--button-mini-padding-horizontal,$--button-medium-font-size,$--button-border-radius);
+  }
+
+  @include m(text) {
+    padding-right: 0;
+    padding-left: 0;
+    color: $--color-primary;
+    border-color: transparent;
+    &:hover,
+    &:focus {
+      color: mix($--color-white, $--color-primary, $--button-hover-tint-percent);
+      background: transparent;
+      background-color: transparent;
+      border-color: transparent;
     }
-    @include when(loading) {
-        position: relative;
-        pointer-events: none;
-        &:before {
-            pointer-events: none;
-            content: '';
-            position: absolute;
-            left: -1px;
-            top: -1px;
-            right: -1px;
-            bottom: -1px;
-            border-radius: inherit;
-            background-color: rgba(255, 255, 255, .35);
-        }
+    &:active {
+      color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+      background-color: transparent;
     }
-    @include when(round) {
-        border-radius: 20px;
-        padding: 12px 23PX;
+    &.is-disabled,
+    &.is-disabled:hover,
+    &.is-disabled:focus {
+      border-color: transparent;
     }
-    @include when(circle) {
-        border-radius: 50%;
-        padding: $--button-padding-vertical;
-    }
-    @include m(primary) {
-        @include button-variant($--button-primary-font-color, $--button-primary-background-color, $--button-primary-border-color);
-    }
-    @include m(success) {
-        @include button-variant($--button-success-font-color, $--button-success-background-color, $--button-success-border-color);
-    }
-    @include m(warning) {
-        @include button-variant($--button-warning-font-color, $--button-warning-background-color, $--button-warning-border-color)
-    }
-    @include m(danger) {
-        @include button-variant($--button-danger-font-color, $--button-danger-background-color, $--button-danger-border-color);
-    }
-    @include m(info) {
-        @include button-variant($--button-info-font-color, $--button-info-background-color, $--button-info-border-color);
-    }
-    @include m(medium) {
-        @include button-size($--button-medium-padding-vertical, $--button-medium-padding-horizontal, $--button-medium-font-size, $--button-medium-border-radius);
-    }
-    @include m(small) {
-        @include button-size($--button-small-padding-vertical, $--button-small-padding-horizontal, $--button-medium-font-size,$--button-small-border-radius);
-    }
-    @include m(mini) {
-        @include button-size($--button-mini-padding-vertical, $--button-mini-padding-horizontal,$--button-medium-font-size,$--button-border-radius);
-    }
-    @include m(text) {
-        border-color: transparent;
-        color: $--color-primary;
-        padding-left: 0;
-        padding-right: 0;
-        
-        &:hover,
-        &:focus{
-            color:mix($--color-white, $--color-primary,$--button-hover-tint-percent);
-            border-color: transparent;
-            background:transparent;
-            background-color: transparent;
-        }
-        &:active{
-            color:mix($--color-black,$--color-primary,$--button-active-shade-percent);
-            background-color: transparent;
-            background-color: transparent;
-        }
-        &.is-disabled,
-        &.is-disabled:hover,
-        &.is-disabled:focus{
-            border-color: transparent;
-        }
-    }
+  }
 }
-@include b(button-group){
-    @include utils-clearfix;
-    display:inline-block;
-    vertical-align:middle;
-    &>.pa-button{
-        float: left;
-        position: relative;
-        & + .pa-button{
-            margin-left: 0;
-        }
-        &.is-disabled{
-            z-index: 1;
-        }
-        &:first-child{
-            border-top-right-radius: 0;
-            border-bottom-right-radius: 0;
-        }
-        &:last-child {
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
-          }
-        &:first-child:last-child{
-            border-top-right-radius: $--button-border-radius;
-            border-bottom-right-radius: $--button-border-radius;
-            border-top-left-radius: $--button-border-radius;
-            border-bottom-left-radius: $--button-border-radius;
 
-            &.is-round{
-                border-radius: 20px;
-            }
+@include b(button-group) {
+  @include utils-clearfix;
 
-            &.is-circle{
-                border-radius: 50%;
-            }
-        }
-        &:not(:first-child):not(:last-child){
-            border-radius: 0;
-        }
-        &:not(:last-child){
-            margin-right: -1px;
-        }
-
-        &:hover,&:focus,&:active{
-            z-index: 1;
-        }
-
-        @include when(active){
-            z-index: 1;
-        }
+  display: inline-block;
+  vertical-align: middle;
+  & > .pa-button {
+    position: relative;
+    float: left;
+    & + .pa-button {
+      margin-left: 0;
     }
-    
-    &>.pa-dropdown{
-        &>.pa-button{
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
-            border-left-color: rgba($--color-white,0.5);
-        }
+    &.is-disabled {
+      z-index: 1;
+    }
+    &:first-child {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    &:last-child {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    &:first-child:last-child {
+      border-top-left-radius: $--button-border-radius;
+      border-top-right-radius: $--button-border-radius;
+      border-bottom-right-radius: $--button-border-radius;
+      border-bottom-left-radius: $--button-border-radius;
+      &.is-round {
+        border-radius: 20px;
+      }
+      &.is-circle {
+        border-radius: 50%;
+      }
+    }
+    &:not(:first-child):not(:last-child) {
+      border-radius: 0;
+    }
+    &:not(:last-child) {
+      margin-right: -1px;
+    }
+    &:hover,&:focus,&:active {
+      z-index: 1;
     }
 
-    @each $type in(primary,sucess,warning,danger,info){
-        .pa-button--#{$type} {
-            &:first-child{
-                border-right-color: rgba($--color-white,0.5);
-            }
-            &:last-child{
-                border-left-color: rgba($--color-white,0.5);
-            }
-            &:not(:first-child):not(:last-child){
-                border-left-color: rgba($--color-white,0.5);
-                border-right-color: rgba($--color-white,0.5);
-            }
-        }
+    @include when(active) {
+      z-index: 1;
     }
+  }
+  & > .pa-dropdown {
+    & > .pa-button {
+      border-left-color: rgba($--color-white, .5);
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+  }
+
+  @each $type in(primary,sucess,warning,danger,info) {
+    .pa-button--#{$type} {
+      &:first-child {
+        border-right-color: rgba($--color-white, .5);
+      }
+      &:last-child {
+        border-left-color: rgba($--color-white, .5);
+      }
+      &:not(:first-child):not(:last-child) {
+        border-right-color: rgba($--color-white, .5);
+        border-left-color: rgba($--color-white, .5);
+      }
+    }
+  }
 }
