--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -5,10 +5,10 @@
 -------------------------- */
 
 $--all-transition:all .3 cubic-bezier(.645, .045, .355, 1) !default;
-$--fade-transition:opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) !default;
+$--fade-transition:opacity 300ms cubic-bezier(.23, 1, .32, 1) !default;
 $--fade-linear-transition: opacity 200ms linear !default;
-$--md-fade-transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1),
-opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) !default;
+$--md-fade-transition: transform 300ms cubic-bezier(.23, 1, .32, 1),
+  opacity 300ms cubic-bezier(.23, 1, .32, 1) !default;
 $--border-transition-base: border-color .2s cubic-bezier(.645, .045, .355, 1) !default;
 $--color-transition-base: color .2s cubic-bezier(.645, .045, .355, 1) !default;
 
@@ -16,11 +16,11 @@ $--color-transition-base: color .2s cubic-bezier(.645, .045, .355, 1) !default;
 -------------------------- */
 
 /// color|1|Brand Color|0
-$--color-primary: #409EFF !default;
+$--color-primary: #409eff !default;
 /// color|1|Background Color|4
-$--color-white: #FFFFFF !default;
+$--color-white: #fff !default;
 /// color|1|Background Color|4
-$--color-black: #000000 !default;
+$--color-black: #000 !default;
 
 $--color-primary-light-1: mix($--color-white, $--color-primary, 10%) !default;
 
@@ -58,7 +58,7 @@ $--color-primary-light-9: mix($--color-white, $--color-primary, 90%) !default;
 
 /// color|1|Functional Color|1
 $--color-success:#67c23a;
-$--color-warning:#E6A23C;
+$--color-warning:#e6a23c;
 $--color-danger:#f56c6c;
 $--color-info:#909399;
 
@@ -71,20 +71,19 @@ $--color-text-regular: #606266 !default;
 /// color|1|Font Color|2
 $--color-text-secondary: #909399 !default;
 /// color|1|Font Color|2
-$--color-text-placeholder: #C0C4CC !default;
+$--color-text-placeholder: #c0c4cc !default;
 /// color|1|Border Color|3
-$--border-color-base: #DCDFE6 !default;
+$--border-color-base: #dcdfe6 !default;
 /// color|1|Border Color|3
-$--border-color-light: #E4E7ED !default;
+$--border-color-light: #e4e7ed !default;
 /// color|1|Border Color|3
-$--border-color-lighter: #EBEEF5 !default;
+$--border-color-lighter: #ebeef5 !default;
 /// color|1|Border Color|3
-$--border-color-extra-light: #F2F6FC !default;
+$--border-color-extra-light: #f2f6fc !default;
 
 // Background
 /// color|1|Background Color|4
-$--background-color-base: #F5F7FA !default;
-
+$--background-color-base: #f5f7fa !default;
 
 /* Disable base
 -------------------------- */
@@ -132,8 +131,6 @@ $--size-base: 14px !default;
 $--index-normal: 1 !default;
 $--index-top: 1000 !default;
 $--index-popper: 2000 !default;
-
-
 
 $--font-path: 'fonts' !default;
 $--font-display: 'auto' !default;
@@ -216,18 +213,18 @@ $--button-info-font-color:$--color-white !default;
 $--button-info-background-color:$--color-info !default;
 $--button-info-border-color: $--color-info !default;
 
-//buttonSize 
+//buttonSize
 $--button-medium-font-size:$--font-size-base !default;
 $--button-medium-border-radius:$--border-radius-base !default;
 $--button-medium-padding-vertical:10px !default;
 $--button-medium-padding-horizontal:20px !default;
 
-$--button-small-font-size:12px!default;
+$--button-small-font-size:12px !default;
 $--button-small-border-radius:#{$--border-radius-base - 1} !default;
 $--button-small-padding-vertical:9px !default;
 $--button-small-padding-horizontal:15px !default;
 
-$--button-mini-font-size:12px!default;
+$--button-mini-font-size:12px !default;
 $--button-mini-border-radius:#{$--border-radius-base -1} !default;
 $--button-mini-padding-vertical:7px !default;
 $--button-mini-padding-horizontal:15px !default;
@@ -271,7 +268,6 @@ $--radio-button-checked-font-color: $--color-white !default;
 /// color||Color|0
 $--radio-button-checked-border-color: $--color-primary !default;
 $--radio-button-disabled-checked-fill: $--border-color-extra-light !default;
-
 
 $--radio-disabled-input-border-color: $--disabled-border-base !default;
 $--radio-disabled-input-fill:$--disabled-fill-base !default;
@@ -362,7 +358,7 @@ $--select-disabled-border: $--disabled-border-base !default;
 
 
 /* Link
---------------------------*/
+-------------------------- */
 $--link-font-size:$--font-size-base !default;
 $--link-font-weight:$--font-weight-primary !default;
 $--link-default-font-color:$--color-text-regular !default;
@@ -373,3 +369,39 @@ $--link-success-font-color:$--color-success !default;
 $--link-warning-font-color:$--color-warning !default;
 $--link-danger-font-color:$--color-danger !default;
 $--link-info-font-color:$--color-info !default;
+
+
+/* Input
+-------------------------- */
+$--input-font-size: $--font-size-base !default;
+/// color||Color|0
+$--input-font-color: $--color-text-regular !default;
+/// height||Other|4
+$--input-width: 140px !default;
+/// height||Other|4
+$--input-height: 40px !default;
+$--input-border: $--border-base !default;
+$--input-border-color: $--border-color-base !default;
+/// borderRadius||Border|2
+$--input-border-radius: $--border-radius-base !default;
+$--input-border-color-hover: $--border-color-hover !default;
+/// color||Color|0
+$--input-background-color: $--color-white !default;
+$--input-fill-disabled: $--disabled-fill-base !default;
+$--input-color-disabled: $--font-color-disabled-base !default;
+/// color||Color|0
+$--input-icon-color: $--color-text-placeholder !default;
+/// color||Color|0
+$--input-placeholder-color: $--color-text-placeholder !default;
+$--input-max-width: 314px !default;
+
+$--input-hover-border: $--border-color-hover !default;
+$--input-clear-hover-color: $--color-text-secondary !default;
+
+$--input-focus-border: $--color-primary !default;
+$--input-focus-fill: $--color-white !default;
+
+$--input-disabled-fill: $--disabled-fill-base !default;
+$--input-disabled-border: $--disabled-border-base !default;
+$--input-disabled-color: $--disabled-color-base !default;
+$--input-disabled-placeholder-color: $--color-text-placeholder !default;
