--- a/packages/theme-chalk/src/radio-button.scss
+++ b/packages/theme-chalk/src/radio-button.scss
@@ -8,39 +8,35 @@
   outline: none;
 
   @include e(inner) {
+    position: relative;
+    box-sizing: border-box;
     display: inline-block;
+    margin: 0;
+    font-weight: $--button-font-weight;
     line-height: 1;
+    color: $--button-default-font-color;
+    text-align: center;
     white-space: nowrap;
     vertical-align: middle;
+    cursor: pointer;
     background: $--button-default-background-color;
     border: $--border-base;
-    font-weight: $--button-font-weight;
     border-left: 0;
-    color: $--button-default-font-color;
-    -webkit-appearance: none;
-    text-align: center;
-    box-sizing: border-box;
     outline: none;
-    margin: 0;
-    position: relative;
-    cursor: pointer;
     transition: $--all-transition;
+    -webkit-appearance: none;
 
     @include button-size($--button-padding-vertical, $--button-padding-horizontal, $--button-font-size, 0);
-
     &:hover {
       color: $--color-primary;
     }
-
     & [class*="pa-icon-"] {
-      line-height: 0.9;
-
+      line-height: .9;
       & + span {
         margin-left: 5px;
       }
     }
   }
-
   &:first-child {
     .pa-radio-button__inner {
       border-left: $--border-base;
@@ -50,11 +46,10 @@
   }
 
   @include e(orig-radio) {
-    opacity: 0;
-    outline: none;
     position: absolute;
     z-index: -1;
-
+    outline: none;
+    opacity: 0;
     &:checked {
       & + .pa-radio-button__inner {
         color: $--radio-button-checked-font-color;
@@ -63,13 +58,12 @@
         box-shadow: -1px 0 0 0 $--radio-button-checked-border-color;
       }
     }
-
     &:disabled {
       & + .pa-radio-button__inner {
         color: $--button-disabled-font-color;
         cursor: not-allowed;
-        background-image: none;
         background-color: $--button-disabled-background-color;
+        background-image: none;
         border-color: $--button-disabled-border-color;
         box-shadow: none;
       }
@@ -78,13 +72,11 @@
       }
     }
   }
-
   &:last-child {
     .pa-radio-button__inner {
       border-radius: 0 $--border-radius-base $--border-radius-base 0;
     }
   }
-
   &:first-child:last-child {
     .pa-radio-button__inner {
       border-radius: $--border-radius-base;
@@ -96,18 +88,19 @@
       @include button-size($--button-medium-padding-vertical, $--button-medium-padding-horizontal, $--button-medium-font-size, 0);
     }
   }
+
   @include m(small) {
     & .pa-radio-button__inner {
       @include button-size($--button-small-padding-vertical, $--button-small-padding-horizontal, $--button-small-font-size, 0);
     }
   }
+
   @include m(mini) {
     & .pa-radio-button__inner {
       @include button-size($--button-mini-padding-vertical, $--button-mini-padding-horizontal, $--button-mini-font-size, 0);
     }
   }
-
-  &:focus:not(.is-focus):not(:active):not(.is-disabled){ /*获得焦点时 样式提醒*/
+  &:focus:not(.is-focus):not(:active):not(.is-disabled) { /* 获得焦点时 样式提醒 */
     box-shadow: 0 0 2px 2px $--radio-button-checked-border-color;
   }
 }
